--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -9993,6 +9993,7 @@
       }
     },
     "手记建议" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
