Supports pinned comments

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -10016,6 +10016,7 @@
       }
     },
     "手记建议" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
